--- a/spells/анимировать-растение.md
+++ b/spells/анимировать-растение.md
@@ -13,32 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Нет|
 
-Вы наделяете безжизненные растения
-способностью передвигаться и имитировать признаки живого существа.
-Каждое анимированное растение немедленно атакует указанную вами цель
-так, если бы оно было анимированным
-объектом соответствующего размера.
-Вы способны анимировать одно Большое растение или немного меньше (к
-примеру, дерево), или эквивалентное
-число больших растений, за три уровня заклинателя. Огромное растение
-считается как два Больших растения,
-Громадное растение как четыре и Колоссальное растение считается как
-восемь Больших растений. Действием
-передвижения вы способны изменять
-назначенные цели или цель как при нацеливании активного заклинания.
-Используете параметры оживленных
-объектов из Справочника Монстров, за
-исключением того, что растение менее
-Большого размера не обладают прочностью, если только МП самостоятельно не установит его для определенных
-случаев.
-Анимировать растения не оказывает эффекта на растительных существ
-(таких как трианты), и не оказывает
-эффекта на неживую растительную
-ткань (хлопковая туника или конопляная веревка).
-|Опутывание| Альтернативно, вы|
-можете наделить растения в пределах
-зоны поражения некой степенью подвижности, что позволяет им обвиваться вокруг существ в зоне поражения.
-Это применение заклинания дублирует эффект заклинания опутывание.
-Устойчивость к магии не предохраняет
-существ от опутывания. Этот эффект
-длится до 1 час/уровень заклинателя.
+Вы наделяете безжизненные растения способностью передвигаться и имитировать признаки живого существа. Каждое анимированное растение немедленно атакует указанную вами цель так, если бы оно было анимированным объектом соответствующего размера. Вы способны анимировать одно Большое растение или немного меньше (к примеру, дерево), или эквивалентное число больших растений, за три уровня заклинателя. Огромное растение считается как два Больших растения, Громадное растение как четыре и Колоссальное растение считается как восемь Больших растений. Действием передвижения вы способны изменять назначенные цели или цель как при нацеливании активного заклинания. Используете параметры оживленных объектов из Справочника Монстров, за исключением того, что растение менее Большого размера не обладают прочностью, если только МП самостоятельно не установит его для определенных случаев. Анимировать растения не оказывает эффекта на растительных существ (таких как трианты), и не оказывает эффекта на неживую растительную ткань (хлопковая туника или конопляная веревка). Опутывание: Альтернативно, вы можете наделить растения в пределах зоны поражения некой степенью подвижности, что позволяет им обвиваться вокруг существ в зоне поражения. Это применение заклинания дублирует эффект заклинания опутывание. Устойчивость к магии не предохраняет существ от опутывания. Этот эффект длится до 1 час/уровень заклинателя.
