--- a/spells/антижизненная-оболочка.md
+++ b/spells/антижизненная-оболочка.md
@@ -13,16 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Вы окружаетесь подвижной, полусферической энергетической оболочкой,
-которая предотвращает проникновение
-большинство типов живых существ.
-Эффект ограждает вас снаружи от животных, необычных, магических зверей,
-драконов, фей, великанов, гуманоидов,
-ужасных гуманоидов, слизи, растений и
-насекомых, но не защищает вас от механизмов, элементалей, внешних или нежити. Смотрите Справочник Монстров
-для большего ознакомления с типами
-существ.
-Это заклинание можно использовать
-лишь для обороны, но не для нападения; применяя барьер защиты на существ, которые отчаянно защищаются
-от этого заклинания, приводит к разрушению барьера (смотрите Защита на
-стр. 17_).
+Вы окружаетесь подвижной, полусферической энергетической оболочкой, которая предотвращает проникновение большинство типов живых существ. Эффект ограждает вас снаружи от животных, необычных, магических зверей, драконов, фей, великанов, гуманоидов, ужасных гуманоидов, слизи, растений и насекомых, но не защищает вас от механизмов, элементалей, внешних или нежити. Смотрите Справочник Монстров для большего ознакомления с типами существ. Это заклинание можно использовать лишь для обороны, но не для нападения; применяя барьер защиты на существ, которые отчаянно защищаются от этого заклинания, приводит к разрушению барьера (смотрите Защита на стр. 17_).
