--- a/spells/антирастительная-оболочка.md
+++ b/spells/антирастительная-оболочка.md
@@ -13,10 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Заклинание антирастительная оболочка создает невидимый подвижный
-барьер, который защищает всех существ находящихся в пределах оболочки, от атак растений или оживленных
-растений. Как и множество заклинаний
-защиты, использование этого барьера
-против существ, которые держатся подальше от этого заклинания, искажает
-и разрушает это поле (смотрите стр.
-17_).
+Заклинание антирастительная оболочка создает невидимый подвижный барьер, который защищает всех существ находящихся в пределах оболочки, от атак растений или оживленных растений. Как и множество заклинаний защиты, использование этого барьера против существ, которые держатся подальше от этого заклинания, искажает и разрушает это поле (смотрите стр. 17_).
