--- a/spells/безумие.md
+++ b/spells/безумие.md
@@ -13,8 +13,4 @@
 |Спасбросок| Воля нейтрализует|
 |Устойчивость к Магии| Да|
 
-Зачарованное существо страдает от
-продолжительного эффекта замешательство, наподобие эффекта заклинания с одноименным названием.
-Снять проклятие не излечивает безумие. Неограниченное восстановление,
-излечение, ограниченное желание, чудо
-или желание могут исцелить существо.
+Зачарованное существо страдает от продолжительного эффекта замешательство, наподобие эффекта заклинания с одноименным названием. Снять проклятие не излечивает безумие. Неограниченное восстановление, излечение, ограниченное желание, чудо или желание могут исцелить существо.
