--- a/spells/благословение.md
+++ b/spells/благословение.md
@@ -13,7 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да (безвредно)|
 
-Благословение наполняет ваших союзников мужеством. Каждый союзник
-получает бонус морали +1 ко всем броскам атаки и спасброскам против эффектов страха.
-Контрзаклинанием благословения и
-рассеивает заклинание чума.
+Благословение наполняет ваших союзников мужеством. Каждый союзник получает бонус морали +1 ко всем броскам атаки и спасброскам против эффектов страха. Контрзаклинанием благословения и рассеивает заклинание чума.
