--- a/spells/благословить-воду.md
+++ b/spells/благословить-воду.md
@@ -14,5 +14,4 @@
 |Устойчивость к Магии| Да (объект)|
 |Материальный Компонент| Щепотка порошкообразного серебра стоимостью не менее 25 зм.|
 
-Это превращение наполняет флягу (0,5
-л.) воды позитивной энергией, превращая ее в святую воду (стр. 1__).
+Это превращение наполняет флягу (0,5 л.) воды позитивной энергией, превращая ее в святую воду (стр. 1__).
