--- a/spells/божья-сила.md
+++ b/spells/божья-сила.md
@@ -11,10 +11,4 @@
 |Цель| Вы|
 |Длительность| 1 раунд/уровень|
 
-Призвав божественную силу вашего
-покровителя, вы наделяете себя силой
-и боевыми умениями. Ваш базовый бонус атаки становится равным вашему
-уровню персонажа (что может дать вам
-дополнительные атаки), вы получает +6
-бонус заколдованности к Силе, и по 1
-временному хит-поинту за уровень заклинателя.
+Призвав божественную силу вашего покровителя, вы наделяете себя силой и боевыми умениями. Ваш базовый бонус атаки становится равным вашему уровню персонажа (что может дать вам дополнительные атаки), вы получает +6 бонус заколдованности к Силе, и по 1 временному хит-поинту за уровень заклинателя.
