--- a/spells/ввести-в-заблуждение.md
+++ b/spells/ввести-в-заблуждение.md
@@ -13,25 +13,4 @@
 |Спасбросок| Нет или Воля неверие (если взаимодействует); смотрите текст|
 |Устойчивость к Магии| Нет|
 
-Вы становитесь невидимым (как улучшенная невидимость, зачарованным) и
-в то же время появляется ваш иллюзорный двойник (как великий образ). Вы
-можете идти куда угодно, в то время как
-двойник уходит прочь. Двойник появляется в пределах диапазона, но затем
-двигается туда, куда вы ему укажете
-(это требует проверок концентрации с
-начала первого раунда заклинания). Вы
-можете сотворить фантом как точную
-копию себя, и тогда наблюдатели не замечают появления образа и то, что вы
-стали невидимы. После этого вы и ваша
-фикция можете двигаться в разных направлениях. Двойник движется с вашей
-скоростью, может говорить и жестикулировать как настоящий, но не может
-атаковать и активировать заклинания,
-хотя и может притворяться, что он это
-делает.
-Иллюзорный двойник существует
-столько, сколько вы сможете концентрироваться на нем +3 дополнительных
-раунда. После прекращения концентрации двойник продолжает ту же самую
-деятельность (например, сбегает вниз
-по холму) до окончания длительности
-заклинания. Улучшенная невидимость
-длиться 1 раунд/уровень вне зависимости от концентрации.
+Вы становитесь невидимым (как улучшенная невидимость, зачарованным) и в то же время появляется ваш иллюзорный двойник (как великий образ). Вы можете идти куда угодно, в то время как двойник уходит прочь. Двойник появляется в пределах диапазона, но затем двигается туда, куда вы ему укажете (это требует проверок концентрации с начала первого раунда заклинания). Вы можете сотворить фантом как точную копию себя, и тогда наблюдатели не замечают появления образа и то, что вы стали невидимы. После этого вы и ваша фикция можете двигаться в разных направлениях. Двойник движется с вашей скоростью, может говорить и жестикулировать как настоящий, но не может атаковать и активировать заклинания, хотя и может притворяться, что он это делает. Иллюзорный двойник существует столько, сколько вы сможете концентрироваться на нем +3 дополнительных раунда. После прекращения концентрации двойник продолжает ту же самую деятельность (например, сбегает вниз по холму) до окончания длительности заклинания. Улучшенная невидимость длиться 1 раунд/уровень вне зависимости от концентрации.
