--- a/spells/вдребезги.md
+++ b/spells/вдребезги.md
@@ -12,23 +12,6 @@
 |Длительность| Мгновенно|
 |Спасбросок| Воля нейтрализует (объект); или Воля нейтрализует (объект) или Стойкость половина; смотрите текст|
 |Устойчивость к Магии| Да (объект)|
-
-Вдребезги создают громкий, звенящий
-звук, который разбивает хрупкие, не
-магические объекты; раскалывает один
-цельный, не магический объект; или повреждает кристаллическое существо.
-Используемое как атака поражающая
-зону, вдребезги разрушает все не магические объекты из кристалла, стекла,
-|керамики или хрусталя, такие как| вазы,|
-бутылки, фляги, кувшины, стекла, зеркала и т.д. все такие объекты в пределах
-1,5 м радиуса от точки образования, разбиваются на десятки осколков. Объекты
-весящие более 0,45 кг./уровень заклинателя, не повреждаемы, но все остальные
-объекты из вышеуказанных веществ
-разбиваются.
-Также вы можете нацелить вдребезги
-на один цельный объект, вне зависимости от его структуры, весом 4,5 кг./уровень заклинателя.
-Нацеливание вдребезги на кристаллическое существо (любого веса), наносит
-ему 1d6 повреждений звуком за уровень
-заклинателя (максимум 10d6), с успешным спасброском Стойкости существо
-переносит половину повреждений.
 |Волшебный Материальный Компонент| Кусочек слюды.|
+
+Вдребезги создают громкий, звенящий звук, который разбивает хрупкие, не магические объекты; раскалывает один цельный, не магический объект; или повреждает кристаллическое существо. Используемое как атака поражающая зону, вдребезги разрушает все не магические объекты из кристалла, стекла, |керамики или хрусталя, такие как| вазы,| бутылки, фляги, кувшины, стекла, зеркала и т.д. все такие объекты в пределах 1,5 м радиуса от точки образования, разбиваются на десятки осколков. Объекты весящие более 0,45 кг./уровень заклинателя, не повреждаемы, но все остальные объекты из вышеуказанных веществ разбиваются. Также вы можете нацелить вдребезги на один цельный объект, вне зависимости от его структуры, весом 4,5 кг. уровень заклинателя. Нацеливание вдребезги на кристаллическое существо (любого веса), наносит ему 1d6 повреждений звуком за уровень заклинателя (максимум 10d6), с успешным спасброском Стойкости существо переносит половину повреждений.
