--- a/spells/великий-образ.md
+++ b/spells/великий-образ.md
@@ -7,9 +7,4 @@
 |Уровень| Брд 3, Маг/Чар 3|
 |Длительность| Концентрация+3 раунда|
 
-Заклинание работает как безмолвный образ, но включает иллюзорные эффекты
-звука, запаха и температуры. Концентрируясь, Вы передвигаете образ в пределах
-диапазона.
-Образ пропадает, когда атакуем противником, если только вы не заставите
-иллюзию соответственно реагировать
-на это действие.
+Заклинание работает как безмолвный образ, но включает иллюзорные эффекты звука, запаха и температуры. Концентрируясь, Вы передвигаете образ в пределах диапазона. Образ пропадает, когда атакуем противником, если только вы не заставите иллюзию соответственно реагировать на это действие.
