--- a/spells/великое-созидание.md
+++ b/spells/великое-созидание.md
@@ -9,12 +9,8 @@
 |Диапазон| Ближний (7,5м.+1,5м./2 ур.)|
 |Длительность| Смотрите текст|
 
-Это заклинание работает как малое
-созидание, но вы также можете сотворять объекты с минеральной основой:
-камень, кристалл, металл или т.п. Длительность существования созданной
-вещи зависит от его прочности и редкости, как показано в таблице:
-Примеры Прочности и
-Редкости
+Это заклинание работает как малое созидание, но вы также можете сотворять объекты с минеральной основой: камень, кристалл, металл или т.п. Длительность существования созданной вещи зависит от его прочности и редкости, как показано в таблице:
+Примеры Прочности и Редкости
 Растительная материя
 Камень, кристалл,
 основные металлы
@@ -29,10 +25,4 @@
 10 мин./уровень
 1 раунд/уровень
 
-* Включая адамантин, алхимическое
-серебро и мифрил.
-Вы не можете использовать великое созидание, чтобы создавать вещи
-из холоднокованого железа. Смотрите
-
-Руководство Мастера Подземелий для
-дополнительных деталей.
+* Включая адамантин, алхимическое серебро и мифрил. Вы не можете использовать великое созидание, чтобы создавать вещи из холоднокованого железа. Смотрите Руководство Мастера Подземелий для дополнительных деталей.
