--- a/spells/великолепие-орла.md
+++ b/spells/великолепие-орла.md
@@ -14,11 +14,4 @@
 |Устойчивость к Магии| Нет и Да(безвредно)|
 |Волшебный Материальный Компонент| Несколько перышек орла или щепотка орлиного помета.|
 
-Превращенное существо становится
-более уравновешенным, четко произносящим свои мысли и более убедительным своей личностью. Эта заклинание
-дает +4 бонус заколдованности к Обаянию, добавляя стандартные преимущества к проверкам навыков основанных
-на Обаянии, и при использовании модификатора Обаяния. Чародеи и барды
-(а также иные заклинатели, которые
-зависят от Обаяния) не получают дополнительных бонусных заклинаний от
-этого заклинания, но КС спасбросков
-для заклинаний, котороые они активируют под эффектом данного заклинания повышаются.
+Превращенное существо становится более уравновешенным, четко произносящим свои мысли и более убедительным своей личностью. Эта заклинание дает +4 бонус заколдованности к Обаянию, добавляя стандартные преимущества к проверкам навыков основанных на Обаянии, и при использовании модификатора Обаяния. Чародеи и барды (а также иные заклинатели, которые зависят от Обаяния) не получают дополнительных бонусных заклинаний от этого заклинания, но КС спасбросков для заклинаний, котороые они активируют под эффектом данного заклинания повышаются.
