--- a/spells/взбирание-по-паучьи.md
+++ b/spells/взбирание-по-паучьи.md
@@ -14,15 +14,4 @@
 |Устойчивость к Магии| Да (безвредно)|
 |Материальный Компонент| Капля битума и живой паук, оба эти предмета должны быть съедены субъектом.|
 
-Субъект получает способность двигаться по вертикальным поверхностям и по
-потолку, так как это умеют делать пауки.
-Существо, находящееся под действием
-этого заклинания должно иметь свободные руки, для того чтобы перемещаться
-подобным образом. Цель получает скорость взбираясь 6 м и, кроме того цели
-не требуется делать никаких проверок
-навыка Взбирание, при перемещении
-по горизонтальным и вертикальным поверхностям (даже если вверх ногами).
-Заклинание взбирание по паучьи сохраняет все дополнительные бонусы КД за
-Ловкость (если есть) во время взбирания, а оппоненты не получают никаких
-особых бонусов при атаке его. Однако
-во время карабканья, он не может использовать бег.
+Субъект получает способность двигаться по вертикальным поверхностям и по потолку, так как это умеют делать пауки. Существо, находящееся под действием этого заклинания должно иметь свободные руки, для того чтобы перемещаться подобным образом. Цель получает скорость взбираясь 6 м и, кроме того цели не требуется делать никаких проверок навыка Взбирание, при перемещении по горизонтальным и вертикальным поверхностям (даже если вверх ногами). Заклинание взбирание по паучьи сохраняет все дополнительные бонусы КД за Ловкость (если есть) во время взбирания, а оппоненты не получают никаких особых бонусов при атаке его. Однако во время карабканья, он не может использовать бег.
