--- a/spells/взрывные-руны.md
+++ b/spells/взрывные-руны.md
@@ -13,24 +13,4 @@
 |Спасбросок| Смотрите текст|
 |Устойчивость к Магии| Да|
 
-Вы наносите таинственные руны на
-книгу, карту, свиток или подобный объект, который хранит письменную информацию. Руны взрываются при чтении, нанося 6d6 силовых повреждений.
-Любой, кто стоит рядом с рунами (чтобы смог прочитать текст или надпись)
-переносит полное повреждение без
-спасбросков; все остальные существа в
-пределах 3 метров от рун могут пройти
-проверку Рефлекса. Чтобы перенести
-половину повреждений. Объект на который нанесены руны, также переносит
-полные повреждения (спасброска нет).
-Вы и персонажи которых вы спе-циально проинструктировали, способны
-нормально читать защищенные рунами
-надписи. Вы также можете в любое время снять руны. Другое существо может
-снять руны лишь с помощью заклинания рассеивание магии или стереть,
-но неудачная проверка этих заклинаний
-при стирании рун может сынициировать их.
-|Ко вниманию| Магические ловушки|
-наподобие взрывных рун очень тяжело
-заметить и обезвредить. Вор (и только)
-способен использовать навык Поиск
-чтобы заметить взрывные руны, и Блокировка Устройств чтобы обезвредить
-их. КС в таком случае равняется 25+уровень заклинания, или 28 для взрывных рун.
+Вы наносите таинственные руны на книгу, карту, свиток или подобный объект, который хранит письменную информацию. Руны взрываются при чтении, нанося 6d6 силовых повреждений. Любой, кто стоит рядом с рунами (чтобы смог прочитать текст или надпись) переносит полное повреждение без спасбросков; все остальные существа в пределах 3 метров от рун могут пройти проверку Рефлекса. Чтобы перенести половину повреждений. Объект на который нанесены руны, также переносит полные повреждения (спасброска нет). Вы и персонажи которых вы спе-циально проинструктировали, способны нормально читать защищенные рунами надписи. Вы также можете в любое время снять руны. Другое существо может снять руны лишь с помощью заклинания рассеивание магии или стереть, но неудачная проверка этих заклинаний при стирании рун может сынициировать их. |Ко вниманию| Магические ловушки| наподобие взрывных рун очень тяжело заметить и обезвредить. Вор (и только) способен использовать навык Поиск чтобы заметить взрывные руны, и Блокировка Устройств чтобы обезвредить их. КС в таком случае равняется 25+уровень заклинания, или 28 для взрывных рун.
