--- a/spells/видение.md
+++ b/spells/видение.md
@@ -9,18 +9,4 @@
 |Время активации| 1 стандартн. действ.|
 |Стоимость в Оп| 100 Оп|
 
-Это заклинание действует аналогично заклинанию знание легенд, однако
-работает гораздо быстрее и требует от
-вас большего напряжения. Вы задаете
-вопрос о какой либо личности, месте
-
-или объекте и затем активируете заклинание. Если интересующая вас персона
-или объект находятся неподалеку или
-вы расположены в том месте которым
-интересуетесь, то вы увидите видение
-о нем пройдя проверку уровня заклинателя (1d20+1 за уровень заклинателя;
-максимум +25) против КС 20. Если информация известная об объекте не достаточно подробная, то КС будет равен
-25 а полученные сведения будут неполными. Если вы располагаете не более
-чем слухами, то КС будет равен 30, а
-полученная информация будет очень
-расплывчата.
+Это заклинание действует аналогично заклинанию знание легенд, однако работает гораздо быстрее и требует от вас большего напряжения. Вы задаете вопрос о какой либо личности, месте или объекте и затем активируете заклинание. Если интересующая вас персона или объект находятся неподалеку или вы расположены в том месте которым интересуетесь, то вы увидите видение о нем пройдя проверку уровня заклинателя (1d20+1 за уровень заклинателя; максимум +25) против КС 20. Если информация известная об объекте не достаточно подробная, то КС будет равен 25 а полученные сведения будут неполными. Если вы располагаете не более чем слухами, то КС будет равен 30, а полученная информация будет очень расплывчата.
