--- a/spells/волны-изнеможения.md
+++ b/spells/волны-изнеможения.md
@@ -13,7 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Волны негативной энергии заставляют
-всех живых существ в зоне поражения
-заклинания впадать в изможденное состояние. Это заклинание не оказывает
-эффекта на уже изнеможенное существо.
+Волны негативной энергии заставляют всех живых существ в зоне поражения заклинания впадать в изможденное состояние. Это заклинание не оказывает эффекта на уже изнеможенное существо.
