--- a/spells/волны-усталости.md
+++ b/spells/волны-усталости.md
@@ -13,6 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Волны негативной энергии заставляют
-всех живых существ в зоне поражения
-заклинания впадать в уставшее состояние. Это заклинание не оказывает эффекта на уже уставшее существо.
+Волны негативной энергии заставляют всех живых существ в зоне поражения заклинания впадать в уставшее состояние. Это заклинание не оказывает эффекта на уже уставшее существо.
