--- a/spells/волшебное-видение.md
+++ b/spells/волшебное-видение.md
@@ -9,12 +9,4 @@
 |Зона| Один 6 м куб/уровень (ИФ)|
 |Длительность| Концентрация+1 час/ уровень (П)|
 
-Заклинание работает как галлюционарная земля, исключая то, что оно заставляет местность выглядеть иначе,
-чем она есть на самом деле. Иллюзия
-включает слуховые, зрительные, осязательные и обонятельные эффекты. Кроме того, заклинание изменяет внешний
-вид построек (или добавляет их, если
-их не было). Но всё же оно не может
-маскировать, скрывать или добавлять
-существа (хотя существа в пределах
-зоны заклинания могут также прятаться в иллюзии, как они могут красться в
-реальной местности).
+Заклинание работает как галлюционарная земля, исключая то, что оно заставляет местность выглядеть иначе, чем она есть на самом деле. Иллюзия включает слуховые, зрительные, осязательные и обонятельные эффекты. Кроме того, заклинание изменяет внешний вид построек (или добавляет их, если их не было). Но всё же оно не может маскировать, скрывать или добавлять существа (хотя существа в пределах зоны заклинания могут также прятаться в иллюзии, как они могут красться в реальной местности).
