--- a/spells/волшебный-глаз.md
+++ b/spells/волшебный-глаз.md
@@ -14,20 +14,4 @@
 |Устойчивость к Магии| Нет|
 |Материальные Компоненты| Кусочек меха летучей мыши.|
 
-Вы создаете невидимый сенсор, который посылает вам визуальную информацию. Волшебный глаз двигает-ся со
-скоростью 9 м в раунд (90 м в минуту),
-если осматривает пространство спереди, так как это, обычно делает человек (в основном глядя на пол), либо
-со скоростью 3 м в раунд (30 м в минуту), если осматривает не только пол
-впереди, но и потолок, и стены. Глаз
-имеет материальную сущность и форму и видит именно то, что вы хотели
-увидеть. В течение продолжительности
-заклинания, волшебный глаз может двигаться в любом направлении. Плотные
-препятствия мешают проникновению
-волшебного глаза, хотя он может проходить сквозь отверстия, не менее мышиной норки (диаметром 2,5см). Глаз
-не может проникать в другие планы
-существования, даже через врата или
-подобные магические порталы.
-Применение волшебного глаза требует от заклинателя полного сосредоточения. Однако если концентрация
-нарушена, заклинание не прекращается
-– глаз просто перестает быть активным,
-пока волшебник снова не сосредоточится.
+Вы создаете невидимый сенсор, который посылает вам визуальную информацию. Волшебный глаз двигает-ся со скоростью 9 м в раунд (90 м в минуту), если осматривает пространство спереди, так как это, обычно делает человек (в основном глядя на пол), либо со скоростью 3 м в раунд (30 м в минуту), если осматривает не только пол впереди, но и потолок, и стены. Глаз имеет материальную сущность и форму и видит именно то, что вы хотели увидеть. В течение продолжительности заклинания, волшебный глаз может двигаться в любом направлении. Плотные препятствия мешают проникновению волшебного глаза, хотя он может проходить сквозь отверстия, не менее мышиной норки (диаметром 2,5см). Глаз не может проникать в другие планы существования, даже через врата или подобные магические порталы. Применение волшебного глаза требует от заклинателя полного сосредоточения. Однако если концентрация нарушена, заклинание не прекращается – глаз просто перестает быть активным, пока волшебник снова не сосредоточится.
