--- a/spells/волшебный-замок.md
+++ b/spells/волшебный-замок.md
@@ -14,14 +14,4 @@
 |Устойчивость к Магии| Нет|
 |Материальный Компонент| Золотая пыль стоимостью не менее 25 зм.|
 
-Заклинание волшебный замок применяется на дверь, сундук, или портал
-– магически закрывая их. Вы можете
-свободно установить снаружи свой замок и заколдовать его; в противном
-случае дверь или объект, охраняемый
-волшебным замком, возможно, открыть
-лишь, выбить дверь или поломать предмет, также возможно открыть успешно,
-сактивировав заклинания рассеивание
-магии или стук. Прибавьте 10 к нормальному КС, чтобы открыть дверь или
-портал, которые находятся под воздействием этого заклинания. (Заклинание
-стук не устраняет волшебный замок;
-оно только подавляет его на 10 минут).
+Заклинание волшебный замок применяется на дверь, сундук, или портал – магически закрывая их. Вы можете свободно установить снаружи свой замок и заколдовать его; в противном случае дверь или объект, охраняемый волшебным замком, возможно, открыть лишь, выбить дверь или поломать предмет, также возможно открыть успешно, сактивировав заклинания рассеивание магии или стук. Прибавьте 10 к нормальному КС, чтобы открыть дверь или портал, которые находятся под воздействием этого заклинания. (Заклинание стук не устраняет волшебный замок; оно только подавляет его на 10 минут).
