--- a/spells/вопль-баньши.md
+++ b/spells/вопль-баньши.md
@@ -12,8 +12,5 @@
 |Длительность| Мгновенно|
 |Спасбросок| Стойкость нейтрализует|
 |Устойчивость к Магии| Да|
-
-Вы издаете ужасающий крик, который убивает любого, кто его услышит
-(за исключением вас). Существа находящиеся ближе остальных к точке
-концентрации заклинания поражаются
-первыми.
+ 
+Вы издаете ужасающий крик, который убивает любого, кто его услышит (за исключением вас). Существа находящиеся ближе остальных к точке концентрации заклинания поражаются первыми.
