--- a/spells/воскрешение.md
+++ b/spells/воскрешение.md
@@ -6,28 +6,6 @@
 |Тип|Колдовство (Лечение)|
 |Уровень| Жр 7|
 |Время Активации| 10 минут.|
+|Материальный Компонент| Окропление святой водой и алмазы общей стоимостью 10000 зм.|
 
-Заклинание работает как и оживить погибшего, но вы способны восстано-вить
-жизнь и полную силу любого умершего
-существа. Состояние останков не имеет значения. Пока имеется хотя бы маленькая часть тела существа, его можно
-воскресить, но эта часть, сохраненная
-для заклинания, должна быть частью
-существа во время его смерти. (Останки существа, пораженного заклинанием
-дезинтеграция принимается как маленькие части тела). Существо должно
-быть мертво не более чем 10 лет за уровень заклинателя.
-
-После завершения заклинания, существо немедленно оживает с полными
-хит-поинтами, энергией и здоровьем, без
-потери заготовленных заклинаний (если
-такие имелись). Однако, субъект теряет
-1 уровень или 2 пункта Тело, если он
-был на 1-м уровне. (Если такое уменьшение доводит Тело до 0 или менее, то
-существо нельзя воскресить). Эту потерю уровня или Телосложения нельзя
-восстановить никаким способом.
-Вы можете воскрешать того, кто был
-убит эффектом смерти, или того, кто
-был превращен в нежить, а затем разрушен. Вы не можете воскресить того, кто
-умер от старости. Механизмы, элементали, внешние и нежить не могут быть
-воскрешены.
-|Материальный Компонент| Окропление святой водой и алмазы общей|
-стоимостью 10000 зм.
+Заклинание работает как и оживить погибшего, но вы способны восстановить жизнь и полную силу любого умершего существа. Состояние останков не имеет значения. Пока имеется хотя бы маленькая часть тела существа, его можно воскресить, но эта часть, сохраненная для заклинания, должна быть частью существа во время его смерти. (Останки существа, пораженного заклинанием дезинтеграция принимается как маленькие части тела). Существо должно быть мертво не более чем 10 лет за уровень заклинателя. После завершения заклинания, существо немедленно оживает с полными хит-поинтами, энергией и здоровьем, без потери заготовленных заклинаний (если такие имелись). Однако, субъект теряет 1 уровень или 2 пункта Тело, если он был на 1-м уровне. (Если такое уменьшение доводит Тело до 0 или менее, то существо нельзя воскресить). Эту потерю уровня или Телосложения нельзя восстановить никаким способом. Вы можете воскрешать того, кто был убит эффектом смерти, или того, кто был превращен в нежить, а затем разрушен. Вы не можете воскресить того, кто умер от старости. Механизмы, элементали, внешние и нежить не могут быть воскрешены.
