--- a/spells/восстановление-неограниченное.md
+++ b/spells/восстановление-неограниченное.md
@@ -8,22 +8,4 @@
 |Время Активации| 10 минут|
 |Стоимость в Оп| 500 очков опыта.|
 
-Заклинание работает как ограниченное
-восстановление, за исключением того,
-что также рассеивает все негативные
-уровни поразившие изле-чиваемое существо. Этот эффект так-же возвращает
-уровни, высосанные силой или существом, восстанавливая пострадавшего
-да самого высокого уровня, который у
-него был. Высосанные уровни восстанавливаются, только если время, прошедшее после потери уровня, не более
-чем неделя за уровень заклинателя.
-Неограниченное восстановление также рассеивает все магические эффекты,
-штрафующие параметры существа, из-
-
-лечивает все временные потери параметров и восстанавливает все навсегда высосанные пункты всех параметров. Оно
-также устраняет любые эффекты усталости и изнеможения, воздействующие на
-субъекта заклинания, удаляет все формы
-безумия, замешательство и подобные
-ментальные эффекты. Неограниченное
-восстановление не возвращает уровни
-и пункты тела, утерянные в результате
-смерти.
+Заклинание работает как ограниченное восстановление, за исключением того, что также рассеивает все негативные уровни поразившие изле-чиваемое существо. Этот эффект так-же возвращает уровни, высосанные силой или существом, восстанавливая пострадавшего да самого высокого уровня, который у него был. Высосанные уровни восстанавливаются, только если время, прошедшее после потери уровня, не более чем неделя за уровень заклинателя. Неограниченное восстановление также рассеивает все магические эффекты, штрафующие параметры существа, излечивает все временные потери параметров и восстанавливает все навсегда высосанные пункты всех параметров. Оно также устраняет любые эффекты усталости и изнеможения, воздействующие на субъекта заклинания, удаляет все формы безумия, замешательство и подобные ментальные эффекты. Неограниченное восстановление не возвращает уровни и пункты тела, утерянные в результате смерти.
