--- a/spells/восстановление-ограниченное.md
+++ b/spells/восстановление-ограниченное.md
@@ -13,9 +13,4 @@
 |Спасбросок| Воля нейтрализует (безвредно)|
 |Устойчивость к Магии| Да (безвредно)|
 
-Ограниченное восстановление рассеивает магические эффекты, понижающие
-один из показателей параметра субъекта (как ослабляющий луч), или восстанавливает 1d4 пункта временного повреждения параметра субъекта (как от
-касания тени или от отравления). Оно
-также устраняет любые эффекты усталости, переносимые персонажем, и
-улучшает изнеможенное состояние до
-усталого. Оно не восстанавливает навсегда высосанные параметры.
+Ограниченное восстановление рассеивает магические эффекты, понижающие один из показателей параметра субъекта (как ослабляющий луч), или восстанавливает 1d4 пункта временного повреждения параметра субъекта (как от касания тени или от отравления). Оно также устраняет любые эффекты усталости, переносимые персонажем, и улучшает изнеможенное состояние до усталого. Оно не восстанавливает навсегда высосанные параметры.
