--- a/spells/восстановление.md
+++ b/spells/восстановление.md
@@ -9,23 +9,6 @@
 |Время Активации| 3 раунда.|
 |Материальный Компонент| Алмазная пыль стоимостью 100 зм, которой посыпают цель заклятия.|
 
-Заклинание работает как ограниченное
-восстановление, за исключением того,
-что также рассеивает негативные уровни и восстанавливает 1 уровень опыта
-существа, у которого он был отнят. Высосанный уровень восстанавливается,
-только если время, прошедшее после
-потери уровня, равно или меньше,
-чем 1 день/уровень заклинателя. Так,
-если персонаж 10-го уровня был ранен
-умертвием и снижен до 9-го уровня,
-восстановление дает персонажу точно
-минимально пунктов опыта, необходимых для получения 10-го уровня (45000
-Оп), добавляя ему КХП и другие способности уровня.
-Восстановление вылечивает все временные потери параметров, а также
-восстанавливает все навсегда высосанные пункты одного отдельного параметра (по вашему выбору, если высосано более 1-го параметра). Оно также
-устраняет любые эффекты усталости и
-изнемождения, влияющие на субъекта
-заклинания.
-Восстановление не поднимает уровни или пункты Телосложения, потерянные в результате смерти.
+Заклинание работает как ограниченное восстановление, за исключением того, что также рассеивает негативные уровни и восстанавливает 1 уровень опыта существа, у которого он был отнят. Высосанный уровень восстанавливается, только если время, прошедшее после потери уровня, равно или меньше, чем 1 день/уровень заклинателя. Так, если персонаж 10-го уровня был ранен умертвием и снижен до 9-го уровня, восстановление дает персонажу точно минимально пунктов опыта, необходимых для получения 10-го уровня (45000 Оп), добавляя ему КХП и другие способности уровня. Восстановление вылечивает все временные потери параметров, а также восстанавливает все навсегда высосанные пункты одного отдельного параметра (по вашему выбору, если высосано более 1-го параметра). Оно также устраняет любые эффекты усталости и изнемождения, влияющие на субъекта заклинания. Восстановление не поднимает уровни или пункты Телосложения, потерянные в результате смерти. 
 
 
