--- a/spells/антипатия.md
+++ b/spells/антипатия.md
@@ -14,25 +14,5 @@
 |Устойчивость к Магии| Да|
 |Волшебный Материальный Компонент| Кусок квасцов смоченных в уксусе.|
 
-Вы заставляете объект или область излучать магические вибрации, которые
-отталкивают любой особенный тип интеллектуального существа или существ
-с определенным мировоззрением, определяется вами в момент активации. Вы
-конкретно называете определенный тип
-существа на которого будет распространяться эффект заклинания – к примеру,
-красные драконы, холмовые великаны,
-оборотекрысы, ламмасу, плащевики,
-или вампиры. Большие группы, такие
-как «гоблиноиды», не достаточно особенный тип существ. Также вы должны
-назвать и особенный тип мировоззрения
-– к примеру, хаотически злое, хаотически доброе, нейтрально доброе, или истинно нейтральное.
-Существа определенного типа и мировоззрения, которого вы обозначили,
-постоянно чувствуют непреодолимое
-желание покинуть эту область или сторонятся предмета, который находится под воздействием заклинания. Эти
-силы вынуждают их покинуть область
-или предмет, остерегаться ее и никогда
-не возвращаться, пока не закончиться
-действие заклинания. Существо, которое успешно прошло спасбросок, может оставаться в этой области или дотрагиваться до предмета, но при этом
-он чувствует себя очень не комфортно.
-Этот отвлекающий дискомфорт уменьшает Ловкость существа на 4 пункта.
-Антипатия является контр-закли-нанием и рассеивает симпатию.
+Вы заставляете объект или область излучать магические вибрации, которые отталкивают любой особенный тип интеллектуального существа или существ с определенным мировоззрением, определяется вами в момент активации. Вы конкретно называете определенный тип существа на которого будет распространяться эффект заклинания – к примеру, красные драконы, холмовые великаны, оборотекрысы, ламмасу, плащевики, или вампиры. Большие группы, такие как «гоблиноиды», не достаточно особенный тип существ. Также вы должны назвать и особенный тип мировоззрения – к примеру, хаотически злое, хаотически доброе, нейтрально доброе, или истинно нейтральное. Существа определенного типа и мировоззрения, которого вы обозначили, постоянно чувствуют непреодолимое желание покинуть эту область или сторонятся предмета, который находится под воздействием заклинания. Эти силы вынуждают их покинуть область или предмет, остерегаться ее и никогда не возвращаться, пока не закончиться действие заклинания. Существо, которое успешно прошло спасбросок, может оставаться в этой области или дотрагиваться до предмета, но при этом он чувствует себя очень не комфортно. Этот отвлекающий дискомфорт уменьшает Ловкость существа на 4 пункта. Антипатия является контр-закли-нанием и рассеивает симпатию.
 
