--- a/spells/астральная-проекция.md
+++ b/spells/астральная-проекция.md
@@ -14,55 +14,6 @@
 |Устойчивость к Магии| Да|
 |Материальные Компоненты| Гиацинт стоимостью не менее 1,000 зм, плюс кусочексеребра стоимостью неменее 5 зм для каждого человека|
 
-Освобождая ваш дух от вашего физического тела, это заклинание позволяет
-вам проектировать астральное тело в
-совершенно другие планы. Вы способны брать с собой астральные формы
-других существ, при условии, что все
-эти создания образуют, замкнутый круг
-вмести с вами, во время активирования
-заклинания. Ваши товарищи во время
-путешествия полностью зависят от вас,
-и вы должны постоянно сопровождать
-их. Если с вами что-то произойдет во
-время путешествия, то ваши товарищи
-останутся на том месте, где вы их оставили.
-Вы проектируете ваше астральное
-тело в Астральный План, оставляя ваше
-физическое тело в Материальном Плане
-в состоянии приостановленной жизни.
-Заклинание проецирует в Астральный
-План вашу полную астральную копию
-и копию всей вашей одежды и снаряжения. Позже когда Астральный План
-соприкасается с другими планами, по
-своему желанию вы можете путешествовать астрально в другие планы.
-Покидая Астральный План, у вас формируется новое материальное тело (и
-снаряжение) в соответствии с жизнью
-плана который вы выбрали.
-Когда вы находитесь в Астральном
-Плане или другом плане, ваше астральное тело постоянно связано с вашим
-материальным телом, при помощи серебряной нити. Если эта нить разрывается,
-вы умираете, астрально и физически. К
-счастью, лишь несколько вещей могут
-уничтожить ее (для дополнительной
-информации смотрите Руководство Мастера Подземелий). Когда второе тело
-уже сформировалось в другом плане,
-нематериальная серебряная нить соединяется с вашим новым телом и при этом
-остается невидимой. Если ваше второе
-тело или астральную форму уничтожат,
-нить возвращается в ваше тело, где оно
-остается в Материальном Плане, выводя его из приостановленного состояния.
-Хотя астральные проекции способны
-функционировать лишь в Астральном
-Плане, их действия возможны лишь на
-существ в Астральном Плане, физическое тело должно материализоваться в
-других планах.
+Освобождая ваш дух от вашего физического тела, это заклинание позволяет вам проектировать астральное тело в совершенно другие планы. Вы способны брать с собой астральные формы других существ, при условии, что все эти создания образуют, замкнутый круг вмести с вами, во время активирования заклинания. Ваши товарищи во время путешествия полностью зависят от вас, и вы должны постоянно сопровождать их. Если с вами что-то произойдет во время путешествия, то ваши товарищи останутся на том месте, где вы их оставили. Вы проектируете ваше астральное тело в Астральный План, оставляя ваше физическое тело в Материальном Плане в состоянии приостановленной жизни. Заклинание проецирует в Астральный План вашу полную астральную копию и копию всей вашей одежды и снаряжения. Позже когда Астральный План соприкасается с другими планами, по своему желанию вы можете путешествовать астрально в другие планы. Покидая Астральный План, у вас формируется новое материальное тело (и снаряжение) в соответствии с жизнью плана который вы выбрали. Когда вы находитесь в Астральном Плане или другом плане, ваше астральное тело постоянно связано с вашим материальным телом, при помощи серебряной нити. Если эта нить разрывается, вы умираете, астрально и физически. К счастью, лишь несколько вещей могут уничтожить ее (для дополнительной информации смотрите Руководство Мастера Подземелий). Когда второе тело уже сформировалось в другом плане, нематериальная серебряная нить соединяется с вашим новым телом и при этом остается невидимой. Если ваше второе тело или астральную форму уничтожат, нить возвращается в ваше тело, где оно остается в Материальном Плане, выводя его из приостановленного состояния. Хотя астральные проекции способны функционировать лишь в Астральном Плане, их действия возможны лишь на существ в Астральном Плане, физическое тело должно материализоваться в других планах.
 
-Вы и ваши товарищи можете неограниченно путешествовать через
-Астральный План. Ваши тела ожидают вас в приостановленном состоянии
-жизни до тех пор, пока вы не захотите
-вернуть свой дух в ваши материальные тела. Заклинание продолжается до
-тех пор, пока вы сами не захотите завершить его действие или пока его не
-заденут внешние средства, такие как
-рассеивание магии, активированное на
-любое материальное тело или астральную форму, или разрушение вашего
-тела в Материальном Плане (что убивает вас).
+Вы и ваши товарищи можете неограниченно путешествовать через Астральный План. Ваши тела ожидают вас в приостановленном состоянии жизни до тех пор, пока вы не захотите вернуть свой дух в ваши материальные тела. Заклинание продолжается до тех пор, пока вы сами не захотите завершить его действие или пока его не заденут внешние средства, такие как рассеивание магии, активированное на любое материальное тело или астральную форму, или разрушение вашего тела в Материальном Плане (что убивает вас).
