--- a/spells/божье-расположение.md
+++ b/spells/божье-расположение.md
@@ -11,10 +11,4 @@
 |Цель| Вы|
 |Длительность| 1 минута|
 
-Призвав силу и мудрость своего бога,
-вы получает +1 бонус удачи к броскам
-атаки и повреждений за ваши каждые
-три уровня заклинателя (как минимум
-+1, максимум +3). Бонус не применяет-
-
-ся к повреждениям от заклинаний.
+Призвав силу и мудрость своего бога, вы получает +1 бонус удачи к броскам атаки и повреждений за ваши каждые три уровня заклинателя (как минимум +1, максимум +3). Бонус не применяется к повреждениям от заклинаний.
