--- a/spells/вампирическое-касание.md
+++ b/spells/вампирическое-касание.md
@@ -13,12 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Вы должны совершить успешную рукопашную касательную атаку. Ваше
-прикосновение наносит 1d6 пунктов
-повреждений за каждые два уровня
-заклинателя (максимум 10d6). Вы получаете временные хит-поинты равные
-количеству повреждения нанесенного
-вами жертве. Однако вы не можете получить больше хит-поинтов чем есть у
-вашей цели +10, поскольку этого достаточно чтобы убить вашего противника.
-Полученные временные хит-поинты
-исчезают по истечению 1 часа.
+Вы должны совершить успешную рукопашную касательную атаку. Ваше прикосновение наносит 1d6 пунктов повреждений за каждые два уровня заклинателя (максимум 10d6). Вы получаете временные хит-поинты равные количеству повреждения нанесенного вами жертве. Однако вы не можете получить больше хит-поинтов чем есть у вашей цели +10, поскольку этого достаточно чтобы убить вашего противника. Полученные временные хит-поинты исчезают по истечению 1 часа.
