--- a/spells/великолепие-орла-массовое.md
+++ b/spells/великолепие-орла-массовое.md
@@ -8,6 +8,5 @@
 |Диапазон| Ближний (7,5 м+1,5 м/2 ур.)|
 |Цель| Одно существо/уровень, расстояние между двумя из которых не должно быть более 9 м|
 
-Это заклинание действует точно также
-как и орлиное великолепие, но за исключением того, что оно действует на нескольких существ.
+Это заклинание действует точно также как и орлиное великолепие, но за исключением того, что оно действует на нескольких существ.
 
