--- a/spells/волшебные-огоньки.md
+++ b/spells/волшебные-огоньки.md
@@ -13,18 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Бледное сияние окружает и подчеркивает субъектов. Выделенные субъекты
-излучают свет равный по мощности
-свече. Выделенные существа не получают преимуществ от укрытия, которое
-обычно дает темнота (хотя заклинание
-темнота 2-го уровня и выше оказывает
-нормальный эффект), размытости, сме-
-
-щения, невидимости или подобных эффектов. Свет слишком тусклый чтобы
-оказывает какие-бы ни было эффекты
-на нежить, или существ проживающих
-во тьме и уязвимых к свету. Волшебные
-огоньки могут быть синими, зелеными или фиолетовыми в соответствии
-с вашим выбором во время активации.
-Волшебные огоньки не оказывают никакого вреда выделяемым объектам или
-субъектам.
+Бледное сияние окружает и подчеркивает субъектов. Выделенные субъекты излучают свет равный по мощности свече. Выделенные существа не получают преимуществ от укрытия, которое обычно дает темнота (хотя заклинание темнота 2-го уровня и выше оказывает нормальный эффект), размытости, смещения, невидимости или подобных эффектов. Свет слишком тусклый чтобы оказывает какие-бы ни было эффекты на нежить, или существ проживающих во тьме и уязвимых к свету. Волшебные огоньки могут быть синими, зелеными или фиолетовыми в соответствии с вашим выбором во время активации. Волшебные огоньки не оказывают никакого вреда выделяемым объектам или субъектам.
